--- a/01-前端开发基础/案例练习/03_王者荣耀/css/index.css
+++ b/01-前端开发基础/案例练习/03_王者荣耀/css/index.css
@@ -76,22 +76,26 @@
   opacity: 0.5;
   transform: rotate(90deg);
 }
-.top-nav-container {
+.wrapper {
+  background: url("../assets/bg.jpg") no-repeat center top;
+  background-size: 100%;
+}
+.wrapper .top-nav-container {
   width: 1300px;
   margin: 0 auto;
 }
-.top-nav {
+.wrapper .top-nav {
   background-color: rgba(0, 0, 0, 0.8);
 }
-.top-nav .top-nav-container {
+.wrapper .top-nav .top-nav-container {
   display: flex;
   justify-content: space-between;
   height: 84px;
 }
-.top-nav .top-nav-container .left {
+.wrapper .top-nav .top-nav-container .left {
   display: flex;
 }
-.top-nav .top-nav-container .left .logo a {
+.wrapper .top-nav .top-nav-container .left .logo a {
   position: relative;
   top: 50%;
   transform: translateY(-50%);
@@ -101,11 +105,11 @@
   text-indent: -9999px;
   background: url("../assets/top_nav_logo.png") no-repeat;
 }
-.top-nav .top-nav-container .left .top-nav-links {
+.wrapper .top-nav .top-nav-container .left .top-nav-links {
   display: flex;
   margin-left: 30px;
 }
-.top-nav .top-nav-container .left .top-nav-links .item a {
+.wrapper .top-nav .top-nav-container .left .top-nav-links .item a {
   padding-top: 20px;
   display: block;
   width: 110px;
@@ -114,77 +118,84 @@
   color: #c9c9dd;
   text-align: center;
 }
-.top-nav .top-nav-container .left .top-nav-links .item a:hover {
+.wrapper .top-nav .top-nav-container .left .top-nav-links .item a:hover {
   border-bottom: 2px solid #f3c258;
   color: #f3c258;
   background-image: linear-gradient(#0c0b06, #f3c258);
 }
-.top-nav .top-nav-container .left .top-nav-links .item a:hover .desc {
+.wrapper .top-nav .top-nav-container .left .top-nav-links .item a:hover .desc {
   color: #f3c258;
 }
-.top-nav .top-nav-container .left .top-nav-links .item a .desc {
+.wrapper .top-nav .top-nav-container .left .top-nav-links .item a .desc {
   display: block;
   padding-top: 4px;
   font-size: 12px;
   color: #858792;
 }
-.top-nav .top-nav-container .right {
+.wrapper .top-nav .top-nav-container .right {
   display: flex;
   align-items: center;
   margin-left: 80px;
 }
-.top-nav .top-nav-container .right .avatar {
+.wrapper .top-nav .top-nav-container .right .avatar {
   width: 42px;
   height: 42px;
   border-radius: 50%;
   border: 1px solid #f3c258;
 }
-.top-nav .top-nav-container .right .user-login {
+.wrapper .top-nav .top-nav-container .right .user-login {
   margin-left: 8px;
 }
-.top-nav .top-nav-container .right .user-login a {
+.wrapper .top-nav .top-nav-container .right .user-login a {
   font-size: 16px;
   color: #fff;
 }
-.top-nav .top-nav-container .right .user-login p {
+.wrapper .top-nav .top-nav-container .right .user-login p {
   font-size: 14px;
   color: #858792;
 }
-.container {
+.wrapper .link {
+  display: block;
+  width: 1200px;
+  height: 440px;
+  margin: 8px auto 12px;
+  font-size: 0;
+}
+.wrapper .container {
   width: 1200px;
   margin: 0 auto;
 }
-.main .main-news .container {
+.wrapper .main .main-news .container {
   display: flex;
   height: 342px;
 }
-.main .main-news .container .banner {
+.wrapper .main .main-news .container .banner {
   width: 605px;
 }
-.main .main-news .container .banner .banner-img-list {
+.wrapper .main .main-news .container .banner .banner-img-list {
   display: flex;
   height: 298px;
   overflow: hidden;
 }
-.main .main-news .container .banner .dotted {
+.wrapper .main .main-news .container .banner .dotted {
   display: flex;
   line-height: 44px;
   justify-content: space-evenly;
 }
-.main .main-news .container .banner .dotted .item {
+.wrapper .main .main-news .container .banner .dotted .item {
   flex: 1;
 }
-.main .main-news .container .banner .dotted .item a {
+.wrapper .main .main-news .container .banner .dotted .item a {
   color: #b1b2be;
   display: block;
   text-align: center;
   background-color: #000;
 }
-.main .main-news .container .banner .dotted .item a:hover {
+.wrapper .main .main-news .container .banner .dotted .item a:hover {
   color: #f3c258;
   background-color: #262626;
 }
-.main .main-news .container .news {
+.wrapper .main .main-news .container .news {
   flex: 1;
   /* 单行文本溢出处理 */
   overflow: hidden;
@@ -192,38 +203,38 @@
   background-color: #282a2c;
   color: #fff;
 }
-.main .main-news .container .news .news-classify {
+.wrapper .main .main-news .container .news .news-classify {
   display: flex;
   justify-content: space-between;
   height: 45px;
   line-height: 42px;
   border-bottom: 3px solid #000;
 }
-.main .main-news .container .news .news-classify .active a {
+.wrapper .main .main-news .container .news .news-classify .active a {
   border-bottom: 3px solid #f3c258;
 }
-.main .main-news .container .news .news-classify .item a {
+.wrapper .main .main-news .container .news .news-classify .item a {
   color: #fff;
 }
-.main .main-news .container .news .news-classify .item:not(.more) a {
+.wrapper .main .main-news .container .news .news-classify .item:not(.more) a {
   display: block;
   font-size: 14px;
   height: 45px;
   line-height: 45px;
   padding: 0 10px;
 }
-.main .main-news .container .news .news-classify .item:not(.more) a:hover {
+.wrapper .main .main-news .container .news .news-classify .item:not(.more) a:hover {
   color: #f3c258;
   border-bottom: 3px solid #f3c258;
 }
-.main .main-news .container .news .notice {
+.wrapper .main .main-news .container .news .notice {
   height: 36px;
   line-height: 36px;
   padding: 0 15px;
   margin: 18px 0;
   background-color: #414046;
 }
-.main .main-news .container .news .notice a {
+.wrapper .main .main-news .container .news .notice a {
   display: block;
   font-size: 18px;
   color: #f3c258;
@@ -232,16 +243,16 @@
   white-space: nowrap;
   overflow: hidden;
 }
-.main .main-news .container .news .content {
+.wrapper .main .main-news .container .news .content {
   font-size: 12px;
 }
-.main .main-news .container .news .content .item {
+.wrapper .main .main-news .container .news .content .item {
   display: flex;
   align-items: center;
   margin-bottom: 13px;
   overflow: hidden;
 }
-.main .main-news .container .news .content .item a {
+.wrapper .main .main-news .container .news .content .item a {
   display: block;
   color: #b8b9c5;
   font-size: 13px;
@@ -250,59 +261,135 @@
   white-space: nowrap;
   text-overflow: ellipsis;
 }
-.main .main-news .container .news .content .item a .news-type {
+.wrapper .main .main-news .container .news .content .item a .news-type {
   text-align: center;
   color: #e31436;
   border: 1px solid #e31436;
   border-radius: 2px;
   padding: 0 2px;
 }
-.main .main-news .container .news .content .item .date {
+.wrapper .main .main-news .container .news .content .item .date {
   padding: 0 8px;
   color: #999;
   font-size: 12px;
 }
-.main .main-news .container .other {
+.wrapper .main .main-news .container .other {
   width: 236px;
   background-color: skyblue;
 }
-.main .main-news .container .other a {
+.wrapper .main .main-news .container .other a {
   display: block;
   text-indent: -9999px;
   overflow: hidden;
   background: url("../assets/main_news_sprite.png") no-repeat;
 }
-.main .main-news .container .other .download_btn {
+.wrapper .main .main-news .container .other .download_btn {
   width: 236px;
   height: 128px;
   background-position: 0 -219px;
 }
-.main .main-news .container .other .env_btn {
+.wrapper .main .main-news .container .other .env_btn {
   width: 236px;
   height: 106px;
   background-position: 0 -350px;
 }
-.main .main-news .container .other .experience_btn {
+.wrapper .main .main-news .container .other .experience_btn {
   width: 236px;
   height: 108px;
   background-position: 0 -461px;
 }
-.main .quick-entry {
+.wrapper .main .quick-entry {
   margin: 28px auto 34px;
 }
-.main .quick-entry .container .quick-entry-list {
+.wrapper .main .quick-entry .container .quick-entry-list {
   display: flex;
   justify-content: space-between;
 }
-.main .quick-entry .container .quick-entry-list .item a {
+.wrapper .main .quick-entry .container .quick-entry-list .item a {
   display: block;
   overflow: hidden;
 }
-.main .quick-entry .container .quick-entry-list .item a img {
+.wrapper .main .quick-entry .container .quick-entry-list .item a img {
   transition: all 0.5s ease;
   width: 291px;
 }
-.main .quick-entry .container .quick-entry-list .item a:hover img {
+.wrapper .main .quick-entry .container .quick-entry-list .item a:hover img {
   transform: scale(1.1);
+}
+.wrapper .main .section-content .container {
+  display: flex;
+  justify-content: space-between;
+}
+.wrapper .main .section-content .container .left {
+  width: 872px;
+}
+.wrapper .main .section-content .container .left .header {
+  display: flex;
+  justify-content: space-between;
+  height: 26px;
+  line-height: 26px;
+  margin-bottom: 16px;
+}
+.wrapper .main .section-content .container .left .header .title {
+  padding-left: 33px;
+  position: relative;
+  font-size: 22px;
+}
+.wrapper .main .section-content .container .left .header .title:before {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto 0;
+  display: block;
+  content: '';
+  width: 140px;
+  height: 26px;
+  background: url("../assets/main_news_sprite.png") no-repeat 0 -106px;
+}
+.wrapper .main .section-content .container .left .header .more {
+  padding-left: 22px;
+  position: relative;
+  font-size: 14px;
+}
+.wrapper .main .section-content .container .left .header .more:before {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto 0;
+  display: block;
+  content: '';
+  width: 22px;
+  height: 22px;
+  background: url("../assets/main_news_sprite.png") no-repeat -252px 4px;
+}
+.wrapper .main .section-content .container .left .tab_control {
+  display: flex;
+  text-align: center;
+  line-height: 29px;
+  height: 32px;
+}
+.wrapper .main .section-content .container .left .tab_control .item {
+  flex: 1;
+  background-color: #f5f5f5;
+  color: #333;
+  font-size: 14px;
+  cursor: pointer;
+  border-bottom: 3px solid transparent;
+}
+.wrapper .main .section-content .container .left .tab_control .active {
+  color: #333;
+  border-bottom-color: #f3c258;
+}
+.wrapper .main .section-content .container .left .tab_control .line {
+  width: 1px;
+  height: 20px;
+  background-color: #e1e1e1;
+}
+.wrapper .main .test {
+  height: 500px;
 }
 /*# sourceMappingURL=index.css.map */
