--- a/01-前端开发基础/案例练习/03_王者荣耀/css/index.less
+++ b/01-前端开发基础/案例练习/03_王者荣耀/css/index.less
@@ -96,306 +96,409 @@
   }
 }
 
-.top-nav-container {
-  width: 1300px;
-  margin: 0 auto;
-}
-
-.top-nav {
-  background-color: rgba(0, 0, 0, .8);
+.wrapper {
+  background: url("../assets/bg.jpg") no-repeat center top;
+  background-size: 100%;
 
   .top-nav-container {
-    display: flex;
-    justify-content: space-between;
+    width: 1300px;
+    margin: 0 auto;
+  }
 
-    height: 84px;
+  .top-nav {
 
-    .left {
+    background-color: rgba(0, 0, 0, .8);
+
+    .top-nav-container {
       display: flex;
+      justify-content: space-between;
 
-      .logo {
+      height: 84px;
 
-        a {
-          position: relative;
-          top: 50%;
-          transform: translateY(-50%);
-          display: block;
-          width: 200px;
-          height: 54px;
-          text-indent: -9999px;
-          background: url("../assets/top_nav_logo.png") no-repeat;
-        }
-      }
-
-      .top-nav-links {
+      .left {
         display: flex;
-        margin-left: 30px;
 
-        .item {
+        .logo {
+
           a {
-            padding-top: 20px;
+            position: relative;
+            top: 50%;
+            transform: translateY(-50%);
             display: block;
-            width: 110px;
-            height: 84px;
-            font-size: 18px;
-            color: #c9c9dd;
-            text-align: center;
+            width: 200px;
+            height: 54px;
+            text-indent: -9999px;
+            background: url("../assets/top_nav_logo.png") no-repeat;
+          }
+        }
 
-            &:hover {
-              border-bottom: 2px solid #f3c258;
-              color: #f3c258;
-              background-image: linear-gradient(#0c0b06, #f3c258);
+        .top-nav-links {
+          display: flex;
+          margin-left: 30px;
+
+          .item {
+            a {
+              padding-top: 20px;
+              display: block;
+              width: 110px;
+              height: 84px;
+              font-size: 18px;
+              color: #c9c9dd;
+              text-align: center;
+
+              &:hover {
+                border-bottom: 2px solid #f3c258;
+                color: #f3c258;
+                background-image: linear-gradient(#0c0b06, #f3c258);
+
+                .desc {
+                  color: #f3c258;
+                }
+              }
 
               .desc {
-                color: #f3c258;
+                display: block;
+                padding-top: 4px;
+                font-size: 12px;
+                color: #858792;
               }
-            }
-
-            .desc {
-              display: block;
-              padding-top: 4px;
-              font-size: 12px;
-              color: #858792;
             }
           }
         }
       }
-    }
 
-    .right {
-      display: flex;
-      align-items: center;
-      margin-left: 80px;
+      .right {
+        display: flex;
+        align-items: center;
+        margin-left: 80px;
 
-      .avatar {
-        width: 42px;
-        height: 42px;
-        border-radius: 50%;
-        border: 1px solid #f3c258;
-      }
-
-      .user-login {
-        margin-left: 8px;
-
-        a {
-          font-size: 16px;
-          color: #fff;
+        .avatar {
+          width: 42px;
+          height: 42px;
+          border-radius: 50%;
+          border: 1px solid #f3c258;
         }
 
-        p {
-          font-size: 14px;
-          color: #858792;
+        .user-login {
+          margin-left: 8px;
+
+          a {
+            font-size: 16px;
+            color: #fff;
+          }
+
+          p {
+            font-size: 14px;
+            color: #858792;
+          }
         }
+
       }
 
     }
 
   }
 
-}
+  .link {
+    display: block;
+    width: 1200px;
+    height: 440px;
+    margin: 8px auto 12px;
+    font-size: 0;
+  }
 
-.container {
-  width: 1200px;
-  margin: 0 auto;
-}
+  .container {
+    width: 1200px;
+    margin: 0 auto;
+  }
 
-.main {
-  .main-news {
-    .container {
-      display: flex;
-      height: 342px;
+  .main {
+    .main-news {
+      .container {
+        display: flex;
+        height: 342px;
 
-      .banner {
-        width: 605px;
+        .banner {
+          width: 605px;
 
-        .banner-img-list {
-          display: flex;
-          height: 298px;
-          overflow: hidden;
-        }
-
-        .dotted {
-          display: flex;
-          line-height: 44px;
-          justify-content: space-evenly;
-
-          .item {
-            flex: 1;
-
-            a {
-              color: #b1b2be;
-              display: block;
-              text-align: center;
-              background-color: #000;
-
-              &:hover {
-                color: #f3c258;
-                background-color: #262626;
-              }
-            }
-          }
-        }
-      }
-
-      .news {
-        flex: 1;
-        /* 单行文本溢出处理 */
-        overflow: hidden;
-        padding: 0 17px;
-        background-color: #282a2c;
-        color: #fff;
-
-        .news-classify {
-          display: flex;
-          justify-content: space-between;
-          height: 45px;
-          line-height: 42px;
-          border-bottom: 3px solid #000;
-
-          .active {
-            a {
-              border-bottom: 3px solid #f3c258;
-            }
+          .banner-img-list {
+            display: flex;
+            height: 298px;
+            overflow: hidden;
           }
 
-          .item {
-            a {
-              color: #fff;
-            }
+          .dotted {
+            display: flex;
+            line-height: 44px;
+            justify-content: space-evenly;
 
-            &:not(.more) {
+            .item {
+              flex: 1;
+
               a {
+                color: #b1b2be;
                 display: block;
-                font-size: 14px;
-                height: 45px;
-                line-height: 45px;
-                padding: 0 10px;
+                text-align: center;
+                background-color: #000;
 
                 &:hover {
                   color: #f3c258;
-                  border-bottom: 3px solid #f3c258;
+                  background-color: #262626;
                 }
               }
             }
           }
         }
 
-        .notice {
-          height: 36px;
-          line-height: 36px;
-          padding: 0 15px;
-          margin: 18px 0;
-          background-color: #414046;
+        .news {
+          flex: 1;
+          /* 单行文本溢出处理 */
+          overflow: hidden;
+          padding: 0 17px;
+          background-color: #282a2c;
+          color: #fff;
 
-
-          a {
-            display: block;
-            font-size: 18px;
-            color: #f3c258;
-            /* 单行文本溢出处理 */
-            text-overflow: ellipsis;
-            white-space: nowrap;
-            overflow: hidden;
-          }
-        }
-
-        .content {
-          font-size: 12px;
-
-          .item {
+          .news-classify {
             display: flex;
-            align-items: center;
-            margin-bottom: 13px;
-            overflow: hidden;
+            justify-content: space-between;
+            height: 45px;
+            line-height: 42px;
+            border-bottom: 3px solid #000;
+
+            .active {
+              a {
+                border-bottom: 3px solid #f3c258;
+              }
+            }
+
+            .item {
+              a {
+                color: #fff;
+              }
+
+              &:not(.more) {
+                a {
+                  display: block;
+                  font-size: 14px;
+                  height: 45px;
+                  line-height: 45px;
+                  padding: 0 10px;
+
+                  &:hover {
+                    color: #f3c258;
+                    border-bottom: 3px solid #f3c258;
+                  }
+                }
+              }
+            }
+          }
+
+          .notice {
+            height: 36px;
+            line-height: 36px;
+            padding: 0 15px;
+            margin: 18px 0;
+            background-color: #414046;
+
 
             a {
               display: block;
-              color: #b8b9c5;
-              font-size: 13px;
-              flex: 1;
-              .text-overflow-ellipsis();
+              font-size: 18px;
+              color: #f3c258;
+              /* 单行文本溢出处理 */
+              text-overflow: ellipsis;
+              white-space: nowrap;
+              overflow: hidden;
+            }
+          }
 
-              .news-type {
-                text-align: center;
-                color: @mainColor;
-                border: 1px solid @mainColor;
-                border-radius: 2px;
-                padding: 0 2px;
+          .content {
+            font-size: 12px;
+
+            .item {
+              display: flex;
+              align-items: center;
+              margin-bottom: 13px;
+              overflow: hidden;
+
+              a {
+                display: block;
+                color: #b8b9c5;
+                font-size: 13px;
+                flex: 1;
+                .text-overflow-ellipsis();
+
+                .news-type {
+                  text-align: center;
+                  color: @mainColor;
+                  border: 1px solid @mainColor;
+                  border-radius: 2px;
+                  padding: 0 2px;
+                }
+              }
+
+              .date {
+                padding: 0 8px;
+                color: #999;
+                font-size: 12px;
+              }
+
+            }
+          }
+        }
+
+        .other {
+          width: 236px;
+          background-color: skyblue;
+
+          a {
+            display: block;
+            text-indent: -9999px;
+            overflow: hidden;
+            background: url("../assets/main_news_sprite.png") no-repeat;
+          }
+
+          .download_btn {
+            width: 236px;
+            height: 128px;
+            background-position: 0 -219px
+          }
+
+          .env_btn {
+            width: 236px;
+            height: 106px;
+            background-position: 0 -350px
+          }
+
+          .experience_btn {
+            width: 236px;
+            height: 108px;
+            background-position: 0 -461px;
+          }
+
+        }
+
+      }
+    }
+
+    .quick-entry {
+      margin: 28px auto 34px;
+
+      .container {
+        .quick-entry-list {
+          display: flex;
+          justify-content: space-between;
+
+          .item {
+            a {
+              display: block;
+              overflow: hidden;
+
+              img {
+                transition: all 0.5s ease;
+                width: 291px;
+              }
+
+              &:hover {
+                img {
+                  transform: scale(1.1);
+                }
               }
             }
-
-            .date {
-              padding: 0 8px;
-              color: #999;
-              font-size: 12px;
-            }
-
           }
         }
       }
-
-      .other {
-        width: 236px;
-        background-color: skyblue;
-
-        a {
-          display: block;
-          text-indent: -9999px;
-          overflow: hidden;
-          background: url("../assets/main_news_sprite.png") no-repeat;
-        }
-
-        .download_btn {
-          width: 236px;
-          height: 128px;
-          background-position: 0 -219px
-        }
-
-        .env_btn {
-          width: 236px;
-          height: 106px;
-          background-position: 0 -350px
-        }
-
-        .experience_btn {
-          width: 236px;
-          height: 108px;
-          background-position: 0 -461px;
-        }
-
-      }
-
     }
-  }
 
-  .quick-entry {
-    margin: 28px auto 34px;
-
-    .container {
-      .quick-entry-list {
+    .section-content {
+      .container {
         display: flex;
         justify-content: space-between;
 
-        .item {
-          a {
-            display: block;
-            overflow: hidden;
+        .left {
+          width: 872px;
+          //background-color: pink;
 
-            img {
-              transition: all 0.5s ease;
-              width: 291px;
+          .header {
+            display: flex;
+            justify-content: space-between;
+            height: 26px;
+            line-height: 26px;
+            margin-bottom: 16px;
+
+            .title {
+              padding-left: 33px;
+              position: relative;
+              font-size: 22px;
+
+              &:before {
+                position: absolute;
+                left: 0;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                margin: auto 0;
+                display: block;
+                content: '';
+                width: 140px;
+                height: 26px;
+                background: url("../assets/main_news_sprite.png") no-repeat 0 -106px;
+              }
             }
 
-            &:hover {
-              img {
-                transform: scale(1.1);
+            .more {
+              padding-left: 22px;
+              position: relative;
+              font-size: 14px;
+
+              &:before {
+                position: absolute;
+                left: 0;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                margin: auto 0;
+                display: block;
+                content: '';
+                width: 22px;
+                height: 22px;
+                background: url("../assets/main_news_sprite.png") no-repeat -252px 4px;
               }
+            }
+          }
+
+          .tab_control {
+            display: flex;
+            text-align: center;
+            line-height: 29px;
+            height: 32px;
+
+            .item {
+              flex: 1;
+              background-color: #f5f5f5;
+              color: #333;
+              font-size: 14px;
+              cursor: pointer;
+              border-bottom: 3px solid transparent;
+            }
+
+            .active {
+              color: #333;
+              border-bottom-color: #f3c258;
+            }
+
+            .line {
+              width: 1px;
+              height: 20px;
+              background-color: #e1e1e1;
             }
           }
         }
       }
     }
+
+    .test {
+      height: 500px;
+    }
   }
-
-
 }
